chaging apigetway pom.xml and security config